# BakaXL-Deprecated-Core-Minecraft

./: Cargo.toml  LICENSE
src/: game_version.rs  launcher_core.rs  main.rs
src/json/: json_version.rs  mod.rs
src/tools/: file_tools.rs  mod.rs  string_tools.rs  system_tools.rs  uuid_tools.rs
src/users/: developer_user_type.rs  mod.rs  user_types.rs
