[package]
name = "bakaxl-core-minecraft"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
rust-crypto = "0.2.36"
serde = { version = "1.0.164", features = ["serde_derive"] }
serde_json = { version = "1.0.97", features = ["indexmap"] }
uuid = { version = "1.3.4", features = ["v4"]}
zip = "0.6.6"
